syntax = "proto3";
package pb;

option go_package = "./pb";

message GetWorkspaceRequest {
  // query for obtaining a Workspace in the format of (field:comparator:value)(and|or conjunction)?
  //
  // Example:
  // (
  //  (objectId:eq:xxxxxx-xxxx-xxxx)
  //  (or)
  //  (workspaceName:like:%value%)
  // )
  string query = 1;
}

message CreateWorkspaceRequest {
  string workspaceName = 1;
}

message CreateWorkspaceResponse {
  string objectId = 1;
}

message CreateFolderRequest {
  // The object id of the container where this folder will be created in.
  // The object id can refer to a workspace or another folder. If parentObjectId
  // refers to a workspace object id, this folder will be created as a top level folder.
  // If the object refers to another folder, then this folder will be created as a child
  // of the folder referred to by parentObjectId.
  string parentObjectId = 1;

  // The name of the folder. Also used as the folder label.
  string name = 2;

}
