syntax = "proto3";
import "reqres.proto";

option go_package = "./ecm/pb";

package ecm;

service ContentEngine {

  rpc CreateWorkspace(CreateWorkspaceRequest) returns (CreateWorkspaceResponse) {}

}

